@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019-2025 Team Galacticraft
+ * Copyright (c) 2019-2026 Team Galacticraft
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -25,7 +25,6 @@ package dev.galacticraft.mod.compat.rei.client.category;
 import com.google.common.collect.Lists;
 import dev.galacticraft.mod.compat.rei.common.GalacticraftREIServerPlugin;
 import dev.galacticraft.mod.compat.rei.common.display.DefaultCompressingDisplay;
-import dev.galacticraft.mod.content.GCBlocks;
 import dev.galacticraft.mod.util.Translations;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
@@ -47,12 +46,13 @@ import org.jetbrains.annotations.NotNull;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static dev.galacticraft.mod.Constant.Compressor.*;
+import static dev.galacticraft.mod.content.GCBlocks.COMPRESSOR;
 
 @Environment(EnvType.CLIENT)
 public class DefaultCompressingCategory implements DisplayCategory<DefaultCompressingDisplay> {
+    private static final DecimalFormat FORMAT = new DecimalFormat("###.##");
 
     @Override
     public CategoryIdentifier<? extends DefaultCompressingDisplay> getCategoryIdentifier() {
@@ -61,7 +61,7 @@ public class DefaultCompressingCategory implements DisplayCategory<DefaultCompre
 
     @Override
     public Renderer getIcon() {
-        return EntryStacks.of(new ItemStack(GCBlocks.COMPRESSOR));
+        return EntryStacks.of(new ItemStack(COMPRESSOR));
     }
 
     @Override
@@ -78,10 +78,10 @@ public class DefaultCompressingCategory implements DisplayCategory<DefaultCompre
         List<EntryIngredient> input = recipeDisplay.getInputEntries();
         List<Slot> slots = Lists.newArrayList();
 
-        DecimalFormat df = new DecimalFormat("###.##");
-        double processingTime = recipeDisplay.getProcessingTime();
-        widgets.add(Widgets.createLabel(new Point(bounds.x + bounds.width - 5, bounds.y + 5),
-                Component.translatable("category.rei.campfire.time", df.format(processingTime / 20.0D))).noShadow().rightAligned().color(0xFF404040, 0xFFBBBBBB));
+        double processingTime = recipeDisplay.getProcessingTime() * 50.0D;
+        widgets.add(new CustomArrowWidget(SCREEN_TEXTURE, new Rectangle(startPoint.x + PROGRESS_X, startPoint.y + PROGRESS_Y, PROGRESS_WIDTH, PROGRESS_HEIGHT), PROGRESS_U, PROGRESS_V, processingTime));
+        widgets.add(Widgets.createLabel(new Point(bounds.getMaxX() - 5, bounds.y + 5),
+                Component.translatable(Translations.RecipeCategory.REI_TIME, FORMAT.format(processingTime / 1000.0D))).noShadow().rightAligned().color(0xFF404040, 0xFFBBBBBB));
 
         // 3x3 grid
         // Output
@@ -103,8 +103,12 @@ public class DefaultCompressingCategory implements DisplayCategory<DefaultCompre
         widgets.add(Widgets.createResultSlotBackground(outputPoint));
         widgets.add(Widgets.createSlot(outputPoint).disableBackground().markOutput().entries(recipeDisplay.getOutputEntries().get(0)));
 
-        widgets.add(Widgets.createSlot(new Point(startPoint.x + FUEL_X, startPoint.y + FUEL_Y)).markInput().entries(AbstractFurnaceBlockEntity.getFuel().keySet().stream().map(EntryStacks::of).collect(Collectors.toList())));
+        widgets.add(Widgets.createSlot(new Point(startPoint.x + FUEL_X, startPoint.y + FUEL_Y)).entries(AbstractFurnaceBlockEntity.getFuel().keySet().stream().map(EntryStacks::of).toList()));
         widgets.add(Widgets.createBurningFire(new Point(startPoint.x + FIRE_X, startPoint.y + FIRE_Y)).animationDurationMS(10000));
+
+        if (recipeDisplay.isShapeless()) {
+            widgets.add(Widgets.createShapelessIcon(new Point(bounds.getMaxX() - 4, bounds.getMaxY() - 14)));
+        }
         return widgets;
     }
 
@@ -141,8 +145,8 @@ public class DefaultCompressingCategory implements DisplayCategory<DefaultCompre
     }
 
     @Override
-    public int getMaximumDisplaysPerPage() {
-        return 99;
+    public int getDisplayWidth(DefaultCompressingDisplay display) {
+        return RECIPE_VIEWER_WIDTH + 10;
     }
 
     @Override
@@ -151,7 +155,7 @@ public class DefaultCompressingCategory implements DisplayCategory<DefaultCompre
     }
 
     @Override
-    public int getDisplayWidth(DefaultCompressingDisplay display) {
-        return RECIPE_VIEWER_WIDTH + 10;
+    public int getMaximumDisplaysPerPage() {
+        return 99;
     }
 }
